@@ -164,6 +164,7 @@
             NOTE: Please refer to the migration notes!
     * 0653 script to extract hw/sw inventory data in csv format...
     * 0655 FIX: win_cpuinfo and mk_inventory.ps1 agent: unit of CPU speed fixed, fixes for long output lines in agent
+    * 1379 FIX: Fixed filter "Host has inventory data"...
 
     check:
     * 1384 oracle_jobs: new WATO rules, changed service name to SID.OWNER.NAME...
